- Add dashboard for VSphere host cluster and virtual machine. {pull}14135[14135]
- Add test for documented fields check for metricsets without a http input. {issue}17315[17315] {pull}17334[17334]
- Release the azure module as GA. {pull}17319[17319]
- In the kubernetes manifests, mount the data directory from the host, so data persist between executions in the same node. {pull}17429[17429]

*Packetbeat*

- Add `dns.question.subdomain` and `dns.question.top_level_domain` fields. {pull}14578[14578]
- Add `redact_headers` configuration option to allow HTTP request headers to be redacted whilst keeping the header field included in the Beat. {pull}15353[15353]
- Enable setting promiscuous mode automatically. {pull}11366[11366]

*Winlogbeat*

- Add Audit and Log Management, Computer Object Management, and Distribution Group related events to the Security module. {pull}15217[15217]
- Add experimental event log reader implementation that should be faster in most cases. {issue}6585[6585] {pull}16849[16849]

[[release-notes-7.6.2]]
=== Beats version 7.6.2
https://github.com/elastic/beats/compare/v7.6.1\...v7.6.2[View commits]

==== Breaking changes

*Affecting all Beats*

- Fix an issue that could cause redundant configuration reloads. {pull}16440[16440]
- Fix metadata enrichers to use default config for kubernetes module. {pull}17020[17020]

*Metricbeat*

- Make use of secure port when accessing Kubelet API {pull}16063[16063]

==== Bugfixes

*Affecting all Beats*

- Fix k8s metadata issue regarding node labels not shown up on root level of metadata. {pull}16834[16834]

*Filebeat*

- Ensure all zeek timestamps include millisecond precision. {issue}14599[14599] {pull}16766[16766]
- Fix issue where autodiscover hints default configuration was not being copied. {pull}16987[16987]

*Metricbeat*

- Convert increments of 100 nanoseconds/ticks to milliseconds for WriteTime and ReadTime in diskio metricset (Windows) for consistency. {issue}14233[14233]