@@ -8,8 +8,6 @@ This file is generated! See scripts/mage/docs_collector.go
 [role="xpack"]
 === CockroachDB status metricset
 
-beta[]
-
 include::../../../../x-pack/metricbeat/module/cockroachdb/status/_meta/docs.asciidoc[]
 
 This is a default metricset. If the host module is unconfigured, this metricset is enabled by default.
