@@ -54,7 +54,7 @@
                         "line_width": 1,
                         "metrics": [
                             {
-                                "field": null,
+                                "field": "prometheus.metrics.capacity",
                                 "id": "61ca57f2-469d-11e7-af02-69e470af7417",
                                 "type": "sum"
                             }
@@ -90,7 +90,7 @@
                         "line_width": 1,
                         "metrics": [
                             {
-                                "field": null,
+                                "field": "prometheus.metrics.capacity_available",
                                 "id": "775782d1-ec64-11ea-8a63-93b9b48262dc",
                                 "type": "sum"
                             }
@@ -116,7 +116,7 @@
                         "line_width": 1,
                         "metrics": [
                             {
-                                "field": null,
+                                "field": "prometheus.metrics.capacity_used",
                                 "id": "78322b61-ec64-11ea-8a63-93b9b48262dc",
                                 "type": "sum"
                             }
